[project]
name = "snake-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "pygame>=2.6.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/rocm7.1"
